--- a/EtuStackOverflow/appsettings.json
+++ b/EtuStackOverflow/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MySql": "Server=MYSQL8010.site4now.net;Database=db_aa875c_etudb;Uid=aa875c_etudb;Pwd=AskForEtu.25"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
