passowrd reset tamam ve arayuzde tamam

--- a/EtuStackOverflow/EtuStackOverflow.csproj
+++ b/EtuStackOverflow/EtuStackOverflow.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AskForEtu.Repository\AskForEtu.Repository.csproj" />
+    <ProjectReference Include="..\EmailSenderService\EmailSenderService.csproj" />
   </ItemGroup>
 
 </Project>
