--- a/EtuStackOverflow/EtuStackOverflow.csproj
+++ b/EtuStackOverflow/EtuStackOverflow.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>d0d36a2c-e068-44a4-89f7-f0f68a75aed3</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
