--- a/EtuStackOverflow/appsettings.Production.json
+++ b/EtuStackOverflow/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySql": "Server=MYSQL8010.site4now.net;Database=db_aa875c_etudb;Uid=aa875c_etudb;Pwd=AskForEtu.25"
+    "MySql": "Server=localhost;Port=3306;Database=EtuStackOverflowDB;Uid=etu_user;Pwd=P@ssw0rd;"
   },
   "Logging": {
     "LogLevel": {
