--- a/EtuStackOverflow/Properties/launchSettings.json
+++ b/EtuStackOverflow/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "http": {
+    "Development": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
@@ -9,14 +9,24 @@
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5004"
     },
-    "https": {
+    "Production": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7099;http://localhost:5004"
+      "dotnetRunMessages": false,
+      "applicationUrl": "http://localhost:5004"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "environmentVariables": {
+        "ASPNETCORE_HTTPS_PORTS": "8081",
+        "ASPNETCORE_HTTP_PORTS": "8080"
+      },
+      "publishAllPorts": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
