--- a/EtuStackOverflow/appsettings.Docker.json
+++ b/EtuStackOverflow/appsettings.Docker.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySql": "Server=localhost;Port=3306;Database=EtuStackOverflowDB;Uid=etu_user;Pwd=P@ssw0rd;AllowPublicKeyRetrieval=True"
+    "MySql": "Server=etusowf-db;Database=EtuStackOverflowDB;Uid=etu_user;Pwd=P@ssw0rd;AllowPublicKeyRetrieval=True"
   },
   "Logging": {
     "LogLevel": {
