--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,10 @@ services:
     ports:
       - "8080:8080"
     restart: always
-
+    depends_on:
+      - etusowf-db
+    networks:
+      - etu
 
   etusowf-db:
     image: mysql:latest
@@ -23,7 +26,7 @@ services:
       - "3306:3306"
     restart: always
     networks:
-        - etu
+      - etu
     volumes:
         - mysqldata:/var/lib/mysql
 
