--- a/EtuStackOverflow/appsettings.Development.json
+++ b/EtuStackOverflow/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySql": "Server=MYSQL8010.site4now.net;Database=db_aa875c_etudb;Uid=aa875c_etudb;Pwd=AskForEtu.25"
+    "SqlServer": "Server=localhost,1433;Database=EtuStackOverflowDB;User Id=sa;Password=P@ssw0rd;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
