--- a/EtuStackOverflow/appsettings.Production.json
+++ b/EtuStackOverflow/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySql": "Server=etusowf-db;Database=EtuStackOverflowDB;Uid=etu_user;Pwd=P@ssw0rd;AllowPublicKeyRetrieval=True"
+    "SqlServer": "Server=etusowf-db,1433;Database=EtuStackOverflowDB;User Id=sa;Password=P@ssw0rd;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
