--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ version: '3.4'
 
 services:
   etustackoverflow:
-    image: ${docker_regýstry-}etustackoverflow
+    image: ${DOCKER_REGISTRY-}etustackoverflow
     build:
-        context: .
-        dockerfile: etustackoverflow/dockerfile
+      context: .
+      dockerfile: EtuStackOverflow/Dockerfile
     ports:
-        - "8080:8080"
+      - "8080:8080"
     restart: always
     depends_on:
-        - etusowf-db
+      - etusowf-db
     networks:
-        - etu
+      - etu
 
   etusowf-db:
     image: mcr.microsoft.com/mssql/server:2022-latest
