--- a/EtuStackOverflow/appsettings.Development.json
+++ b/EtuStackOverflow/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost,1433;Database=EtuStackOverflowDB;User Id=sa;Password=P@ssw0rd;TrustServerCertificate=True"
+    "SqlServer": "Server=192.168.1.139,1433;Database=EtuStackOverflowTestDB;User Id=sa;Password=P@ssw0rd;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
