fix some problem

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.4'
 
 services:
+  # etusowf-db:
+  #   image: mcr.microsoft.com/mssql/server:2022-latest
+  #   container_name: etusowf-db
+  #   environment:
+  #     ACCEPT_EULA: "Y"
+  #     SA_PASSWORD: "P@ssw0rd"
+  #   ports:
+  #     - "1433:1433"
+  #   restart: always
+  #   networks:
+  #     - etu
+  #   volumes:
+  #     - mssqldata:/var/opt/mssql
+
   c_askforetuapp:
     image: askforetu
     build:
@@ -8,4 +22,12 @@ services:
       dockerfile: EtuStackOverflow/Dockerfile
     ports:
       - "5004:5004"
-    restart: always
+#     networks:
+#       - etu
+
+# networks:
+#   etu:
+
+# volumes:
+#   mssqldata:
+  
