--- a/EtuStackOverflow/appsettings.EmailSettings.json
+++ b/EtuStackOverflow/appsettings.EmailSettings.json
@@ -1,9 +1,9 @@
 {
   "EmailOptions": {
-    "From": "mikroblog.devteam@gmail.com",
-    "Psw": "bwuvfuaxyooqteat",
-    "Host": "smtp.gmail.com",
-    "Port": 587
+    "From": "YOUR_EMAIL,
+    "Psw": "YOUR_AUTH_PASSWORD",
+    "Host": "MAIL_HOST",
+    "Port": MAIL_HOST_PORT
   },
   "QueueCapacity": 100
 }
