--- a/EtuStackOverflow/appsettings.EmailSettings.json
+++ b/EtuStackOverflow/appsettings.EmailSettings.json
@@ -1,6 +1,6 @@
 {
   "EmailOptions": {
-    "From": "YOUR_EMAIL,
+    "From": "YOUR_EMAIL",
     "Psw": "YOUR_AUTH_PASSWORD",
     "Host": "MAIL_HOST",
     "Port": MAIL_HOST_PORT
